# bilety_funds

./: CMakeLists.txt  a.out  postfix.cpp
avl_tree/: a.out  avl_tree.hpp  avl_tree_.hpp  main.cpp
bil1/: a.out  ex1.txt  ex2.txt  ex6.cpp
bil12/: a.out  ex5.c
bil13/: a.out  ex5.c
bil3/: ex1.txt  ex2.txt  ex3.txt  ex4.txt  ex5.c
bil4/: a.out  ex6.cpp
bil7/: a.out  ex5.cpp  ex5.hpp  ex6.cpp
splay_tree/: splay_tree.hpp
